objects/Billing_Rule__c/Billing_Rule__c.object-meta.xml
<CustomObject>
    <label>Billing Rule</label>
    <nameField>
        <label>Billing Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Billing Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>