objects/Billing_Rule__c/fields/Billing_Rate_After_Weekly_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Billing_Rate_After_Weekly_Threshold__c</fullName>
    <label>Billing Rate After Weekly Threshold</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TimeRateCode</valueSetName>
    </valueSet>
</CustomField>