objects/Billing_Rule__c/fields/Enable_Weekly_Total_Calculation__c.field-meta.xml
<CustomField>
    <fullName>Enable_Weekly_Total_Calculation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Weekly Total Calculation</label>
    <type>Checkbox</type>
</CustomField>