objects/Billing_Rule__c/fields/Holidays_Bill_in_OT_Rate__c.field-meta.xml
<CustomField>
    <fullName>Holidays_Bill_in_OT_Rate__c</fullName>
    <label>Holidays Bill in OT Rate</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Holiday_List</valueSetName>
    </valueSet>
</CustomField>