objects/Billing_Rule__c/fields/Quote_Order_Assumption__c.field-meta.xml
<CustomField>
    <fullName>Quote_Order_Assumption__c</fullName>
    <label>Quote/Order Assumption</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PortalBasis</fullName>
            </value>
            <value>
                <fullName>OvertimeRate</fullName>
            </value>
            <value>
                <fullName>DailyRate</fullName>
            </value>
            <value>
                <fullName>LumpSum</fullName>
            </value>
            <value>
                <fullName>PortalBasisAdv</fullName>
            </value>
            <value>
                <fullName>DefaultBillingRule2023</fullName>
            </value>
            <value>
                <fullName>LumpSum2023</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>