objects/Billing_Rule__c/fields/Sunday_Rate_Code__c.field-meta.xml
<CustomField>
    <fullName>Sunday_Rate_Code__c</fullName>
    <label>Sunday Rate Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TimeRateCode</valueSetName>
    </valueSet>
</CustomField>