objects/Billing_Rule__c/fields/Time_After__c.field-meta.xml
<CustomField>
    <fullName>Time_After__c</fullName>
    <label>Time After</label>
    <type>Time</type>
</CustomField>