objects/Billing_Rule__c/fields/Time_Before__c.field-meta.xml
<CustomField>
    <fullName>Time_Before__c</fullName>
    <label>Time Before</label>
    <type>Time</type>
</CustomField>