objects/Billing_Rule__c/fields/Time_Before_Rate_Code__c.field-meta.xml
<CustomField>
    <fullName>Time_Before_Rate_Code__c</fullName>
    <label>Time Before Rate Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TimeRateCode</valueSetName>
    </valueSet>
</CustomField>