objects/Billing_Rule__c/fields/Weekly_Hour_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Weekly_Hour_Threshold__c</fullName>
    <label>Weekly Hour Threshold</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>